fixed css display issue on tablet and desktop viewports, resulting in a mobile element only showing its transition on page load

--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,13 @@
 #SideMenu{
     /* transform: translateX(100%); */
     transform: translateX(100%);
-    transition: transform .3s
+    transition: transform .5s;
+
 }
 #SideMenu.true{
-    transform: translateX(0%)
+    transform: translateX(0%);
+    transition: transform .5s
+
 }
 body{
     overflow-x: hidden;
